# Procjam2023

./: CMakeLists.txt  index.html
impl/: CMakeLists.txt
impl/elements_lib/: CMakeLists.txt  element.cpp  element.hpp  element_factory.cpp  element_factory.hpp  periodic_system.cpp  periodic_system.hpp
impl/gamelib/: CMakeLists.txt  state_game.cpp  state_game.hpp  state_intro.cpp
